--- a/each.cabal
+++ b/each.cabal
@@ -1,5 +1,5 @@
 name:                each
-version:             0.1.0.0
+version:             1.1.0.0
 synopsis:
     Template Haskell library for writing monadic expressions more easily
 
@@ -27,7 +27,7 @@ library
   build-depends:       base >= 4.9 && < 5
                      , template-haskell
                      , mtl
-                     , containers
+                     , dlist
   default-language:    Haskell2010
 
 test-suite each-test
