--- a/each.cabal
+++ b/each.cabal
@@ -1,5 +1,5 @@
 name:                each
-version:             1.1.0.0
+version:             1.1.1.0
 synopsis:
     Template Haskell library for writing monadic expressions more easily
 
@@ -37,7 +37,7 @@ test-suite each-test
                      , each
                      , hspec
                      , QuickCheck
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   default-language:    Haskell2010
 
 source-repository head
